# word-game

./: .gitignore  Cargo.toml  release.bat
res/words/: 5000_out.txt  basic.txt  filter.py
src/: events.rs  main.rs  network.rs  render.rs  word_game.rs
