[package]
name = "word-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.3"
log = "0.4.20"
pretty_env_logger = "0.5.0"
rand = "0.8.5"


[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
